--- a/WebSharper.Plotly/WebSharper.Plotly.fsproj
+++ b/WebSharper.Plotly/WebSharper.Plotly.fsproj
@@ -1,17 +1,17 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <WebSharperSourceMap>false</WebSharperSourceMap>
+    <WebSharperProject>Extension</WebSharperProject>
   </PropertyGroup>
-
   <ItemGroup>
+    <Compile Include="Layout.fs" />
+    <Compile Include="Traces.fs" />
     <Compile Include="Main.fs" />
     <None Include="wsconfig.json" />
   </ItemGroup>
-
   <ItemGroup>
-    <PackageReference Include="WebSharper" Version="4.7.2.445" />    
+    <PackageReference Include="WebSharper" Version="4.7.2.445" />
     <PackageReference Include="WebSharper.FSharp" Version="4.7.2.445" />
   </ItemGroup>
-
 </Project>
