--- a/WebSharper.Plotly/WebSharper.Plotly.fsproj
+++ b/WebSharper.Plotly/WebSharper.Plotly.fsproj
@@ -7,6 +7,7 @@
     <Compile Include="Options/Options.fs" />
     <Compile Include="Layout/Layout.fs" />
     <Compile Include="Traces/Bar.fs" />
+    <Compile Include="Traces/PieTrace.fs" />
     <Compile Include="Traces/ScatterGLTrace.fs" />
     <Compile Include="Traces/ScatterTrace.fs" />
     <Compile Include="Main.fs" />
