--- a/WebSharper.Plotly/WebSharper.Plotly.fsproj
+++ b/WebSharper.Plotly/WebSharper.Plotly.fsproj
@@ -6,6 +6,7 @@
     <Compile Include="Permutation.fs" />
     <Compile Include="Options/Options.fs" />
     <Compile Include="Layout/Layout.fs" />
+    <Compile Include="Traces/HeatMap.fs" />
     <Compile Include="Traces/Bar.fs" />
     <Compile Include="Traces/PieTrace.fs" />
     <Compile Include="Traces/ScatterGLTrace.fs" />
