Layout updated (builds)

--- a/WebSharper.Plotly/WebSharper.Plotly.fsproj
+++ b/WebSharper.Plotly/WebSharper.Plotly.fsproj
@@ -5,7 +5,7 @@
   <ItemGroup>
     <Compile Include="Permutation.fs" />
     <Compile Include="Options/Options.fs" />
-    <!--Compile Include="Layout/Layout.fs" /-->
+    <Compile Include="Layout/Layout.fs" />
     <Compile Include="Traces/Simple/Contour.fs" />
     <Compile Include="Traces/Simple/HeatMap.fs" />
     <Compile Include="Traces/Simple/HeatMapGL.fs" />
