--- a/WebSharper.Plotly.Tests/WebSharper.Plotly.Tests.fsproj
+++ b/WebSharper.Plotly.Tests/WebSharper.Plotly.Tests.fsproj
@@ -1,25 +1,22 @@
+<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk.Web">
-
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <OutputDirectory>../build</OutputDirectory>
   </PropertyGroup>
-
   <ItemGroup>
     <Compile Include="Client.fs" />
     <Compile Include="Startup.fs" />
+    <Content Include="index.html" />
     <None Include="wsconfig.json" />
   </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="WebSharper" Version="4.7.2.445" />    
-    <PackageReference Include="WebSharper.FSharp" Version="4.7.2.445" />
-    <PackageReference Include="WebSharper.UI" Version="4.7.2.243" />
-    <PackageReference Include="WebSharper.AspNetCore" Version="4.7.1.166" />
-  </ItemGroup>
-
+  <Target Name="CopyFiles" AfterTargets="Build">
+    <Copy SourceFiles="index.html" DestinationFolder="$(OutputDirectory)" />
+  </Target>
   <ItemGroup>
     <Reference Include="WebSharper.Plotly">
       <HintPath>..\WebSharper.Plotly\bin\Debug\netstandard2.0\WebSharper.Plotly.dll</HintPath>
     </Reference>
   </ItemGroup>
+  <Import Project="..\.paket\Paket.Restore.targets" />
 </Project>
