--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,7 +6,7 @@ on:
       - master
 jobs:
   build-and-deploy:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     steps:
       - name: Checkout 🛎️
         uses: actions/checkout@v2
@@ -17,13 +17,12 @@ jobs:
       - name: Install and Build 🔧
         uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: '3.1.x'
-      - run: |
-          bash ./build.sh
+          dotnet-version: '5.0.301'
+      - run: ./build
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@releases/v3
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           BRANCH: gh-pages
-          FOLDER: WebSharper.Plotly.Tests/wwwroot
+          FOLDER: build
