--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,6 +14,16 @@ jobs:
           persist-credentials: false 
           submodules: true
 
+      - name: Install Paket as global tool
+        run: dotnet tool install paket --global
+
+      - name: Add credentials for Paket
+        run:
+          paket config
+            add-credentials https://nuget.pkg.github.com/dotnet-websharper/index.json
+            --username intellifactory-gh 
+            --password ${{ secrets.PAT_PACKAGE }}
+
       - name: Install and Build 🔧
         uses: actions/setup-dotnet@v1
         with:
