--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,7 +28,7 @@ jobs:
         uses: actions/setup-dotnet@v1
         with:
           dotnet-version: '5.0.301'
-      - run: ./build
+      - run: bash ./build.sh
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@releases/v3
