--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,6 +8,11 @@ jobs:
   build-and-deploy:
     runs-on: windows-latest
     steps:
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: 6.0.101
+          
       - name: Checkout 🛎️
         uses: actions/checkout@v2
         with:
@@ -24,11 +29,8 @@ jobs:
             --username intellifactory-gh 
             --password ${{ secrets.PAT_PACKAGE }}
 
-      - name: Install and Build 🔧
-        uses: actions/setup-dotnet@v1
-        with:
-          dotnet-version: 6.0.101
-      - run: ./build
+      - name: Build 🔧
+        run: ./build
 
       - name: Deploy 🚀
         uses: peaceiris/actions-gh-pages@v3
