#1 - Convert to be npm based

--- a/nuget/WebSharper.Plotly.paket.template
+++ b/nuget/WebSharper.Plotly.paket.template
@@ -14,6 +14,7 @@ tags
 files
     ../WebSharper.Plotly/bin/Release/netstandard2.0/WebSharper.Plotly.dll ==> lib/netstandard2.0
     ../WebSharper.Plotly/bin/Release/netstandard2.0/WebSharper.Plotly.xml ==> lib/netstandard2.0
+    ../WebSharper.Plotly/WebSharper.Plotly.fsproj ==> src/
 dependencies
     framework: netstandard2.0
             WebSharper ~> LOCKEDVERSION:[3]
