Add AssemblyInfo and fix nuget description

--- a/WebSharper.Plotly/WebSharper.Plotly.fsproj
+++ b/WebSharper.Plotly/WebSharper.Plotly.fsproj
@@ -64,5 +64,6 @@
       <NpmPackage Name="plotly.js-locales" Version="gt= 2.26.0 lt 3.0.0" ResolutionStrategy="Max" />
     </NpmDependencies>
   </PropertyGroup>
+  <Import Project="..\paket-files\wsbuild\github.com\dotnet-websharper\build-script\WebSharper.Fake.targets" Condition="Exists('..\paket-files\wsbuild\github.com\dotnet-websharper\build-script\WebSharper.Fake.targets')" />
   <Import Project="..\.paket\Paket.Restore.targets" />
 </Project>
