--- a/nuget/WebSharper.Plotly.paket.template
+++ b/nuget/WebSharper.Plotly.paket.template
@@ -8,7 +8,7 @@ repositoryUrl https://github.com/dotnet-websharper/plotly/
 licenseUrl https://github.com/dotnet-websharper/plotly/blob/master/LICENSE.md
 iconUrl https://github.com/dotnet-websharper/core/raw/websharper50/tools/WebSharper.png
 description
-    WebSharper bindings for Plotly.js 2.2.1
+    WebSharper bindings for Plotly.js 2.26+
 tags
     Web JavaScript F# C#
 files
