--- a/WebSharper.Plotly.Tests/WebSharper.Plotly.Tests.fsproj
+++ b/WebSharper.Plotly.Tests/WebSharper.Plotly.Tests.fsproj
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net80</TargetFramework>
     <OutputDirectory>../build</OutputDirectory>
   </PropertyGroup>
   <ItemGroup>
+    <None Include="esbuild.config.mjs" />
     <Compile Include="Client.fs" />
     <Compile Include="Startup.fs" />
     <Content Include="index.html" />
@@ -12,6 +13,10 @@
   </ItemGroup>
   <Target Name="CopyFiles" AfterTargets="Build">
     <Copy SourceFiles="index.html" DestinationFolder="$(OutputDirectory)" />
+  </Target>
+    <Target Name="ESBuildBundle" AfterTargets="WebSharperCompile">
+    <Exec Command="npm install" />
+    <Exec Command="node ./esbuild.config.mjs" />
   </Target>
   <ItemGroup>
     <ProjectReference Include="../WebSharper.Plotly/WebSharper.Plotly.fsproj" />
